fix header btns mobile alignment

--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,14 @@ section {
   align-items: center;
   flex-direction: row;
 }
+@media only screen and (max-width: 768px) {
+  .header-btns {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+}
 .header .chevron-down {
   width: 2rem;
   position: absolute;
@@ -491,6 +499,12 @@ section {
 .btn-lg--outline i {
   margin-right: 0.5rem;
   display: inline-block;
+}
+@media only screen and (max-width: 768px) {
+  .btn-lg--outline {
+    margin-left: 0;
+    margin-top: 1.5rem;
+  }
 }
 
 .btn-sm {
