--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -47,6 +47,10 @@
         margin-right: .5rem;
         display: inline-block;
     }
+
+    @media only screen and (max-width: $mobile-sm) {
+        @include btn-lg--outline;
+    }
 }
 
 .btn-sm {
