--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -44,6 +44,10 @@
 
     &-btns {
         @include flexy(flex-start, center);
+
+        @media only screen and (max-width: $mobile-sm) {
+            @include header-btns;
+        }
     }
 
     .chevron-down {
