--- a/scss/states/_mobile.scss
+++ b/scss/states/_mobile.scss
@@ -1,63 +1,8 @@
-@mixin about-padding {
-    padding-left: 1rem;
-    padding-right: 1rem;
+@mixin header-btns {
+    @include flexy(center,flex-start, column);
 }
 
-@mixin section-description {
-    font-size: 1.6rem;
-}
-
-@mixin section-btn {
-    width: 100%;
-    @include flexy(space-evenly, center);
-}
-
-@mixin btn-sm-mobile {
-    margin-top: 3.5rem;
-}
-
-@mixin project-container-dir {
-    flex-direction: column;
-}
-
-@mixin project-image-width {
-    width: 90%;
-    margin: auto;
-    margin-bottom: 5rem;
-}
-
-@mixin project-details {
-    text-align: center;
-}
-
-@mixin contact-padding {
-    padding: .75rem;
-}
-
-@mixin header-title {
-    font-size: 4rem;
-    padding-top: 5rem;
-}
-
-@mixin header-hero-size {
-    font-size: 1.5rem;
-}
-
-// NAVBAR RESPONSIVE
-@mixin navbar-res {
-    padding: pxtorem(16px) pxtorem(25px);
-}
-
-@mixin navbar-menu-res {
-    display: none;
-}
-
-@mixin navbar-toggle-res {
-    display: inline-block;
-    margin-left: auto;
-}
-
-@mixin navbar-branding-res {
-    margin-right: auto;
-    padding-left: 0;
+@mixin btn-lg--outline {
+    margin-left: 0;
+    margin-top: 1.5rem;
 }
