--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -26,3 +26,4 @@ $rotate-clockwise       : rotate(5deg);
 
 // BREAKPOINTS
 $mobile                 : 1068px;
+$mobile-sm              : 768px;
